# noname

./: .gitignore  CMakeLists.txt  README.md  architecture.drawio  requirements_dev.txt
include/noname/: block.hpp  connection.hpp  entity.hpp  factory.hpp  function_block.hpp  observer.hpp  toposort.hpp
source/: block.cpp  connection.cpp  entity.cpp  factory.cpp  function_block.cpp
test/: CMakeLists.txt
test/source/: test_block.cpp  test_function_block.cpp
